--- a/sass/main.css
+++ b/sass/main.css
@@ -169,6 +169,19 @@ p {
     border-radius: 5px;
   }
 }
+#menu .logo-site {
+  height: 35px;
+}
+@media (max-width: 400px) {
+  #menu .logo-site {
+    height: 30px;
+  }
+}
+@media (max-width: 360px) {
+  #menu .logo-site {
+    height: 24px;
+  }
+}
 #menu .nav-link {
   color: var(--primary) !important;
 }
