--- a/sass/main.scss
+++ b/sass/main.scss
@@ -189,6 +189,16 @@ p{
 
       }
     }
+    .logo-site{
+      height: 35px;
+
+      @media (max-width:400px) {
+        height: 30px;
+      }
+      @media (max-width:360px) {
+        height: 24px;
+      }
+    }
 
     .nav-link{
       color: $primary!important;
