--- a/sass/main.css
+++ b/sass/main.css
@@ -266,10 +266,12 @@ p {
 #content .card-btn {
   margin-top: 0.75rem;
 }
-#content #evento {
-  scroll-margin-top: 100px;
+#content .anchor {
+  position: absolute;
+  top: -100px;
 }
 #content .card-duo {
+  position: relative;
   min-height: 350px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
