--- a/sass/main.css
+++ b/sass/main.css
@@ -11,6 +11,7 @@
 body {
   font-family: script;
   background-color: var(--light);
+  background-image: url(../images/bg.jpg);
   color: var(--primary);
   margin: 0px;
 }
@@ -311,14 +312,14 @@ p {
 #content .card-duo .card-image.traje {
   background-image: url(../images/dress.jpg);
   width: 50%;
-  background-size: cover;
+  background-size: contain;
   background-position: top;
 }
 @media (max-width: 767px) {
   #content .card-duo .card-image.traje {
     width: 100%;
     height: auto;
-    min-height: 350px;
+    min-height: 263px;
   }
 }
 #content .card-duo .card-content {
@@ -389,12 +390,44 @@ p {
   color: var(--primary);
 }
 
-footer a {
-  color: var(--primary);
+footer .small {
+  font-size: 0.9rem;
+  font-weight: bold;
 }
-footer a:hover {
-  color: var(--secondary);
+footer a {
   text-decoration: none;
+  color: var(--primary) !important;
+  position: relative;
+}
+footer a:hover span {
+  opacity: 1;
+}
+footer a:hover span.jroque {
+  right: -82px;
+}
+footer a span {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  will-change: opacity;
+  position: absolute;
+  white-space: nowrap;
+  top: 0px;
+}
+footer a span.jroque {
+  right: -45px;
+}
+footer a svg {
+  height: 30px;
+  margin-top: -3px;
+  fill: var(--primary);
+  filter: drop-shadow(0 0 0.1rem var(--secondary));
+}
+footer a svg:hover {
+  filter: drop-shadow(0 0 0.3rem var(--secondary));
+}
+footer a svg:active {
+  transform: translate(3px, 3px);
+  filter: drop-shadow(0 0 0.6rem var(--secondary));
 }
 
 .modal-video-movie-wrap {
