--- a/sass/main.css
+++ b/sass/main.css
@@ -143,6 +143,20 @@ p {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.center-s {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.center-h {
+  display: flex;
+  justify-content: center;
+}
+.center-v {
+  display: flex;
+  align-items: center;
+}
+
 /*
 .modal{
 
@@ -213,6 +227,10 @@ p {
 }
 #menu .dropdown-menu .dropdown-item:hover {
   background: rgba(0, 0, 0, 0.3);
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .banner {
