--- a/sass/main.css
+++ b/sass/main.css
@@ -66,33 +66,47 @@ p {
 .btn {
   padding: 0.375rem 1.5rem;
 }
-.btn:active {
-  transform: translate(3px, 3px);
-}
 .btn:hover {
   cursor: pointer;
 }
-
 .btn-primary {
   transition: all 0.5s ease-in-out;
   background-color: var(--primary);
   border: 1px solid var(--primary);
-  color: var(--light);
+  color: var(--light) !important;
 }
 .btn-primary:hover {
+  color: var(--primary) !important;
   background-color: var(--secondary);
   border: 1px solid var(--secondary);
-  color: var(--primary);
 }
 .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem var(--primary-light);
+  box-shadow: 0 0 0 0rem var(--primary-light);
 }
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
-  color: var(--light);
+  color: var(--light) !important;
   background-color: var(--primary-light);
   border-color: var(--primary-light);
 }
-
+.btn-outline-primary {
+  transition: all 0.5s ease-in-out;
+  background-color: none;
+  border: 1px solid var(--primary);
+  color: var(--primary) !important;
+}
+.btn-outline-primary:hover {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+  color: var(--light) !important;
+}
+.btn-outline-primary:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0rem var(--primary-light);
+}
+.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle {
+  color: var(--primary) !important;
+  background-color: var(--secondary);
+  border-color: var(--secondary);
+}
 .btn-secondary {
   transition: all 0.5s ease-in-out;
   background-color: transparent;
@@ -101,20 +115,16 @@ p {
 }
 .btn-secondary:hover {
   color: var(--light) !important;
-  background-color: var(--primary);
+  background-color: var(--primary) !important;
   border: 2px solid var(--primary) !important;
 }
 .btn-secondary:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.1rem var(--secondary);
+  box-shadow: 0 0 0 0rem var(--secondary);
 }
 .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show > .btn-secondary.dropdown-toggle {
   color: var(--light) !important;
   background-color: var(--primary-light);
   border-color: var(--primary-light);
-}
-.btn-secondary.light {
-  border: 2px solid var(--light);
-  color: var(--light);
 }
 
 .Brown {
@@ -157,6 +167,22 @@ p {
   align-items: center;
 }
 
+.c-primary {
+  color: var(--primary);
+}
+.c-primary-light {
+  color: var(--primary-light);
+}
+.c-primary-dark {
+  color: var(--primary-dark);
+}
+.c-secondary {
+  color: var(--secondary);
+}
+.c-light {
+  color: var(--light);
+}
+
 /*
 .modal{
 
@@ -170,6 +196,17 @@ p {
   }
 }
 */
+#presentes .card-title {
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#presentes .card-text {
+  font-size: 0.875rem;
+  color: var(--primary);
+}
+
 #menu.nav-primary {
   background: var(--primary) !important;
 }
@@ -475,7 +512,7 @@ footer a svg:active {
   resize: none;
   width: 100%;
   text-align: center;
-  height: 30px;
+  height: 100px;
   color: var(--primary);
 }
 
@@ -485,7 +522,7 @@ footer a svg:active {
 .copy-code.success {
   background-color: var(--secondary);
   border: 2px solid var(--secondary) !important;
-  color: var(--light) !important;
+  color: var(--primary) !important;
   transition: all 0.25s ease-in-out;
 }
 .copy-code.success i {
