--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ $primary:var(--primary);
 $primary-dark:var(--primary-dark);
 $secondary: var(--secondary);
 $light:var(--light);
+$light-opacity:var(--light-opacity);
 
 :root{
   --primary-light:#67755f;
@@ -11,6 +12,7 @@ $light:var(--light);
   --primary-dark:#3a4534;
   --secondary: #e9e2b5;
   --light:#faf8f3;
+  --light-opacity:#faf8f3bd;
 }
 
 
@@ -221,6 +223,22 @@ p{
 */
 
   #presentes{
+
+    .card{
+      background: none;
+      border: 1px solid $primary;
+      box-shadow: 2px 2px 10px #505c49aa;
+      position: relative;
+
+      &:after{
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: $light-opacity;
+        filter: blur(50px);
+        z-index: -1;
+      }
+    }
     .card-title{
       height: 48px;
       display: flex;
