--- a/sass/main.css
+++ b/sass/main.css
@@ -4,6 +4,7 @@
   --primary-dark:#3a4534;
   --secondary: #e9e2b5;
   --light:#faf8f3;
+  --light-opacity:#faf8f3bd;
 }
 
 /* ELEMENTS*/
@@ -196,6 +197,20 @@ p {
   }
 }
 */
+#presentes .card {
+  background: none;
+  border: 1px solid var(--primary);
+  box-shadow: 2px 2px 10px rgba(80, 92, 73, 0.6666666667);
+  position: relative;
+}
+#presentes .card:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: var(--light-opacity);
+  filter: blur(50px);
+  z-index: -1;
+}
 #presentes .card-title {
   height: 48px;
   display: flex;
