--- a/sass/main.css
+++ b/sass/main.css
@@ -200,7 +200,7 @@ p {
 #presentes .card {
   background: none;
   border: 1px solid var(--primary);
-  box-shadow: 2px 2px 10px rgba(80, 92, 73, 0.6666666667);
+  box-shadow: 2px 2px 10px rgba(80, 92, 73, 0.3764705882);
   position: relative;
 }
 #presentes .card:after {
@@ -370,6 +370,19 @@ p {
 @media (max-width: 767px) {
   #content .card-duo .card-image:hover {
     background-size: 110%;
+  }
+}
+#content .card-duo .card-image.presentes {
+  background-image: url(../images/presentes.jpg);
+  width: 50%;
+  background-size: cover;
+  background-position: center;
+}
+@media (max-width: 767px) {
+  #content .card-duo .card-image.presentes {
+    width: 100%;
+    height: auto;
+    min-height: 470px;
   }
 }
 #content .card-duo .card-image.evento {
