--- a/sass/main.scss
+++ b/sass/main.scss
@@ -227,7 +227,7 @@ p{
     .card{
       background: none;
       border: 1px solid $primary;
-      box-shadow: 2px 2px 10px #505c49aa;
+      box-shadow: 2px 2px 10px #505c4960;
       position: relative;
 
       &:after{
@@ -408,6 +408,17 @@ p{
           }
         }
 
+        &.presentes{
+          background-image: url(../images/presentes.jpg);
+          width: 50%;
+          background-size: cover;
+          background-position: center;
+          @media (max-width:767px) {
+            width: 100%;
+            height: auto;
+            min-height: 470px;
+          }
+        }
         &.evento{
           background-image: url(../images/navaranda.jpg);
           width: 50%;
