--- a/sass/main.scss
+++ b/sass/main.scss
@@ -412,7 +412,7 @@ p{
           background-image: url(../images/historia.jpg);
           width: 50%;
           background-size: cover;
-          background-position: bottom;
+          background-position: center left;
           @media (max-width:767px) {
             width: 100%;
             height: auto;
